[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "codeyez"
author = "Peter Jun Koh"
author-email = "gojun077@gmail.com"
home-page = "https://github.com/gojun077/dalma_codeyez"
classifiers = [ "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",]
description-file = "README.md"
dist-name = "dalma-codeyez"
requires = [
    "lxml >=4.5.0",
    "requests >=2.22",
    "selenium >=4.4.0a1"]
requires-python = ">= 3.7"
